fixed modal height on mobile

--- a/src/components/Detail/Detail.scss
+++ b/src/components/Detail/Detail.scss
@@ -28,7 +28,7 @@
 
     @media screen and (max-width: 768px) {
       max-width: calc(100% - 40px);
-      height: 100%;
+      height: calc(100% - 40px);
     }
   }
 
